<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.firstscreenfragment.FirstScreenFragment">

    <TextView
        android:id="@+id/tvSearchCheepTickets"
        android:layout_width="172sp"
        android:layout_height="52sp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/Поиск_дешевых_авиабилетов"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMainScreen01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/colorCardMainScreen01"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvSearchCheepTickets"
        app:layout_constraintStart_toStartOf="@+id/tvSearchCheepTickets"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchCheepTickets">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/colorCardMainScreen02"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iconLuppaInMainScreen"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/icon_luppa" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etWayOfFlight"
                        style="@style/NoUnderlineEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:hint="@string/откуда"
                        android:inputType="textCapWords"
                        android:textColor="@color/white"
                        app:boxBackgroundMode="none" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/colorGrayLine" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etWayOfArrive"
                        style="@style/NoUnderlineEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:hint="@string/куда"
                        android:inputType="textCapWords"
                        android:textColor="@color/white"
                        app:boxBackgroundMode="none" />


                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvMusicalnoOtletet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/музыкально_отлететь"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardMainScreen01"
        app:layout_constraintTop_toBottomOf="@+id/cardMainScreen01" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItemsForFirstScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMusicalnoOtletet"
        tools:listitem="@layout/item_to_first_screen" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnShowAllPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/colorCardMainScreen01"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/rvItemsForFirstScreen"
        app:layout_constraintStart_toStartOf="@+id/rvItemsForFirstScreen"
        app:layout_constraintTop_toBottomOf="@+id/rvItemsForFirstScreen">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_btn"
            android:gravity="center"
            android:text="@string/показать_все_места"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvYourFirstPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ваш_первый_раз"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btnShowAllPlaces"
        app:layout_constraintTop_toBottomOf="@+id/btnShowAllPlaces" />


</androidx.constraintlayout.widget.ConstraintLayout>