<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:cardCornerRadius="16dp"
    tools:context=".presentation.secondscreenfragment.SecondScreenFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSecondScreen01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/colorCardMainScreen01"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/colorCardMainScreen02"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iconLuppaInMainScreen"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/icon_luppa" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etWayOfFlight"
                        style="@style/NoUnderlineEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:hint="@string/откуда"
                        android:inputType="textCapWords"
                        android:textColor="@color/white"
                        app:boxBackgroundMode="none" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/colorGrayLine" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etWayOfArrive"
                        style="@style/NoUnderlineEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:hint="@string/куда"
                        android:inputType="textCapWords"
                        android:textColor="@color/white"
                        app:boxBackgroundMode="none" />


                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/scrollViewInSecondFragment"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardSecondScreen01">

    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSecondScreen02"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/colorCardMainScreen01"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewInSecondFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorCardMainScreen01">


            <TextView
                android:id="@+id/strictFlights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Прямые рейсы"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItemsForSecondScreen"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/showAll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/strictFlights"
                tools:listitem="@layout/item_to_second_screen" />

            <TextView
                android:id="@+id/showAll"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/показать_все"
                android:textColor="@color/cardColorBlue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvItemsForSecondScreen" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnShowAllTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/cardColorBlue"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/cardSecondScreen02"
        app:layout_constraintStart_toStartOf="@+id/cardSecondScreen02"
        app:layout_constraintTop_toBottomOf="@+id/cardSecondScreen02">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_btn2"
            android:gravity="center"
            android:text="@string/посмотреть_все_билеты"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>